Fix false error comparing two folders

BUG:477433